[package]
name = "proxy-wasm-rust-response-transformer"
version = "0.1.0"
edition = "2021"
authors = ["Michael Martin <flrgh@protonmail.com>"]

[lib]
path = "src/filter.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
